feat(router): add views and routing

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-  <mes-etiquettes></mes-etiquettes>
+  <main></main>
 
   <script>
     // HACK(keanulee): The Redux package assumes `process` exists - mock it here before
@@ -22,7 +22,7 @@
       }
     };
   </script>
-  <script type="module" src="./src/mes-etiquettes.js"></script>
+  <script type="module" src="./src/index.js"></script>
 </body>
 
 </html>
