feat(wired): use wired ui components

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
   <meta name="Description" content="Put your description here.">
   <base href="/">
-  <link href="./node_modules/@amber-ds/visual/dist/index.css" rel="stylesheet">
   <title>Mes étiquettes</title>
+  <link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -23,6 +23,12 @@
     };
   </script>
   <script type="module" src="./src/index.js"></script>
+  <style>
+    html, body {
+      font-family: 'Gloria Hallelujah', cursive;
+      height: 100%;
+    }
+  </style>
 </body>
 
 </html>
