feat(font): handle several fonts in settings

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <base href="/">
   <title>Mes étiquettes</title>
   <link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Kalam&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Material+Icons&display=block" rel="stylesheet">
 </head>
 
 <body>
@@ -25,10 +27,12 @@
   </script>
   <script type="module" src="./src/index.js"></script>
   <style>
+    html {
+      font-family: 'Gloria Hallelujah', cursive;
+    }
     body, html, main {
       margin: 0;
       height:100%;
-      font-family: 'Gloria Hallelujah', cursive;
       overflow: hidden;
     }
     #canvas {
