feat(menu): custom wheel menu with svg

--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
     };
   </script>
   <script type="module" src="./src/index.js"></script>
-  <script type="module" src="./src/background.js"></script>
   <style>
     html {
       font-family: 'Gloria Hallelujah', cursive;
@@ -34,6 +33,7 @@
       margin: 0;
       height:100%;
       overflow: hidden;
+      background-color: lightgrey;
     }
   </style>
 </body>
