fix: dependencies in local

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       margin: 0;
       height:100%;
       overflow: hidden;
-      background-color: lightgrey;
+      background-color: #eee;
     }
   </style>
 </body>
