--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     }
     body, html, main {
       margin: 0;
-      height:100%;
+      height:100vh;
       overflow: hidden;
       background-color: #eee;
     }
